# fitbit-web-api

./: .all-contributorsrc  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  README.md  TESTING.md  pyproject.toml  setup.py
.github/: renovate.json5
.github/workflows/: ci.yml  labels.yml
.openapi-generator/: FILES
docs/: ActiveZoneMinutesIntradayTimeSeriesApi.md  ActiveZoneMinutesTimeSeriesApi.md  ActivityApi.md  ActivityGoals.md  ActivityIntradayDatapoint.md  ActivityIntradayDataset.md  ActivityIntradayTimeSeriesApi.md  ActivityLog.md  ActivitySummary.md  ActivitySummaryDistancesInner.md  ActivityTimeSeriesApi.md  ActivityTimeSeriesDatapoint.md  Alarm.md  AlarmResponse.md  AuthorizationApi.md  AzmIntradayDatapoint.md  AzmIntradayDataset.md  AzmTimeSeriesDatapoint.md  AzmTimeSeriesDatapointValue.md  AzmValue.md  BodyApi.md  BodyFatLog.md  BodyGoal.md  BodyTimeSeriesApi.md  BodyTimeSeriesDatapoint.md  BreathingRateApi.md  BreathingRateIntradayApi.md  BreathingRateIntradaySummary.md  BreathingRateIntradayValue.md  BreathingRateSummary.md  BreathingRateValue.md  CardioFitnessScoreVO2MaxApi.md  CardioScoreSummary.md  Device.md  DevicesApi.md  EcgReading.md  ElectrocardiogramApi.md  Food.md  FoodGoals.md  FoodLocale.md  (+111 more)
fitbit_web_api/: __init__.py  api_client.py  configuration.py  exceptions.py  rest.py
fitbit_web_api/api/: active_zone_minutes_intraday_time_series_api.py  active_zone_minutes_time_series_api.py  activity_api.py  activity_intraday_time_series_api.py  activity_time_series_api.py  authorization_api.py  body_api.py  body_time_series_api.py  breathing_rate_api.py  breathing_rate_intraday_api.py  cardio_fitness_score_vo2_max_api.py  default_api.py  devices_api.py  electrocardiogram_api.py  friends_api.py  heart_rate_intraday_time_series_api.py  heart_rate_time_series_api.py  heart_rate_variability_api.py  heart_rate_variability_intraday_api.py  irregular_rhythm_notifications_api.py  nutrition_api.py  nutrition_time_series_api.py  sleep_api.py  sp_o2_api.py  sp_o2_intraday_api.py  subscriptions_api.py  temperature_api.py  user_api.py
fitbit_web_api/models/: __init__.py  activity_goals.py  activity_intraday_datapoint.py  activity_intraday_dataset.py  activity_log.py  activity_summary.py  activity_summary_distances_inner.py  activity_time_series_datapoint.py  alarm.py  alarm_response.py  azm_intraday_datapoint.py  azm_intraday_dataset.py  azm_time_series_datapoint.py  azm_time_series_datapoint_value.py  azm_value.py  body_fat_log.py  body_goal.py  body_time_series_datapoint.py  breathing_rate_intraday_summary.py  breathing_rate_intraday_value.py  breathing_rate_summary.py  (+117 more)
openapi/: fitbit-web-api-openapi-fixed.json  openapi-config.yaml
script/: README.md  fitbit_cli.py  generate-client.sh  upgrade-schema.py
test/: conftest.py  test_activity_api.py  test_activity_goals.py  test_activity_intraday_datapoint.py  test_activity_intraday_dataset.py  test_activity_log.py  test_activity_summary.py  test_activity_summary_distances_inner.py  test_activity_time_series_api.py  test_activity_time_series_datapoint.py  test_alarm.py  test_alarm_response.py  test_azm_intraday_datapoint.py  test_azm_intraday_dataset.py  test_azm_time_series_datapoint.py  test_azm_time_series_datapoint_value.py  test_azm_value.py  test_body_api.py  test_body_fat_log.py  test_body_goal.py  test_body_time_series_api.py  test_body_time_series_datapoint.py  test_breathing_rate_api.py  test_breathing_rate_intraday_summary.py  test_breathing_rate_intraday_value.py  test_breathing_rate_summary.py  test_breathing_rate_value.py  test_cardio_score_summary.py  test_device.py  test_devices_api.py  test_ecg_reading.py  test_food.py  test_food_goals.py  test_food_locale.py  test_food_log_entry.py  test_food_serving.py  test_food_unit.py  test_friend.py  test_friend_attributes.py  test_get_activity_goals_response.py  (+100 more)
(+148 files in other folders)
