[project]
name = "fitbit-web-api"
version = "2.13.4"
description = "Fitbit Web API"
authors = [
    { name = "Simone Chemelli", email = "simone.chemelli@gmail.com" },
    { name = "Allen Porter", email = "allen.porter@gmail.com" }
]
requires-python = ">=3.13,<4"
readme = "README.md"
license = "Apache-2.0"
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "python-dateutil>=2.8.2,<3",
    "urllib3>=2.1.0,<3",
    "aiohttp>=3.13.2",
    "pydantic>=2",
    "aiohttp-retry>=2.9.1,<3",
]

[project.urls]
Repository = "https://github.com/allenporter/fitbit-web-api"
"Bug Tracker" = "https://github.com/allenporter/fitbit-web-api/issues"
Changelog = "https://github.com/allenporter/fitbit-web-api/blob/main/CHANGELOG.md"

[dependency-groups]
dev = [
    "pytest>= 7.2.1",
    "pytest-aiohttp>=1.1.0",
    "pytest-cov>= 2.8.1",
    "typing-extensions>=4.7.1",
    "types-python-dateutil>= 2.8.19.14",
    "ruff>=0.12.7,<0.15.0",
]

[tool.hatch.build.targets.sdist]
include = ["fitbit_web_api"]

[tool.hatch.build.targets.wheel]
include = ["fitbit_web_api"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pylint.'MESSAGES CONTROL']
extension-pkg-whitelist = "pydantic"

[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
version_variables = [
    "fitbit_web_api/__init__.py:__version__",
]
build_command = "pip install uv && uv sync && uv build"

[tool.semantic_release.changelog]
exclude_commit_patterns = [
    "chore*",
    "ci*",
]

[tool.semantic_release.changelog.environment]
keep_trailing_newline = true

[tool.semantic_release.branches.main]
match = "main"

[tool.semantic_release.branches.noop]
match = "(?!main$)"
prerelease = true

[tool.pytest.ini_options]
# These flags can be used for test coverage report:
#   --cov=fitbit_web_api --cov-report=term-missing:skip-covered"
# However, coverage is so low at the moment with the generated code and
# it is visually distracting.
addopts = "-v -Wdefault"
pythonpath = ["."]
asyncio_mode = "auto"

[tool.coverage.run]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "@overload",
    "if TYPE_CHECKING",
    "raise NotImplementedError",
    'if __name__ == "__main__":',
]

[tool.ruff]
target-version = "py38"
line-length = 88
ignore = [
    "D203", # 1 blank line required before class docstring
    "D212", # Multi-line docstring summary should start at the first line
    "D100", # Missing docstring in public module
    "D104", # Missing docstring in public package
    "D107", # Missing docstring in `__init__`
    "D401", # First line of docstring should be in imperative mood
]
select = [
    "B",   # flake8-bugbear
    "D",   # flake8-docstrings
    "C4",  # flake8-comprehensions
    "S",   # flake8-bandit
    "F",   # pyflake
    "E",   # pycodestyle
    "W",   # pycodestyle
    "UP",  # pyupgrade
    "I",   # isort
    "RUF", # ruff specific
]

[tool.ruff.per-file-ignores]
"tests/**/*" = [
    "D100",
    "D101",
    "D102",
    "D103",
    "D104",
    "S101",
]
"setup.py" = ["D100"]
"conftest.py" = ["D100"]

[tool.ruff.isort]
known-first-party = ["fitbit_web_api", "tests"]

[tool.mypy]
check_untyped_defs = true
disallow_subclassing_any = true
disallow_untyped_decorators = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
mypy_path = "./"
no_implicit_optional = true
show_error_codes = true
warn_unreachable = true
warn_unused_ignores = true
exclude = [
    'setup.py',
]

[[tool.mypy.overrides]]
module = "tests.*"
allow_untyped_defs = true
